test: timed specific functions in the original script

--- a/original/testing.ipynb
+++ b/original/testing.ipynb
@@ -27,15 +27,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_data(data):\n",
+    "    \"\"\"\n",
+    "    Plots energy and order parameter against Monte Carlo step.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : pd.DataFrame\n",
+    "        The data from the Lebwohl-Lasher simulation.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Plot energy and order parameter against Monte Carlo step.\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(12, 4))\n",
+    "\n",
+    "    ax[0].plot(data.index, data[\"Energy\"])\n",
+    "    ax[1].plot(data.index, data[\"Order\"])\n",
+    "\n",
+    "    ax[0].set_title(\"Reduced Temperature = 0.5\")\n",
+    "    ax[0].set_xlabel(\"Monte Carlo Step\")\n",
+    "    ax[0].set_ylabel(\"Reduced Energy\")\n",
+    "\n",
+    "    ax[1].set_title(\"Reduced Temperature = 0.5\")\n",
+    "    ax[1].set_xlabel(\"Monte Carlo Step\")\n",
+    "    ax[1].set_ylabel(\"Order Parameter\")\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$\\textbf{1.1 Base Version}$\n",
+    "\n",
     "+ ```lebwohl_lasher.py Version: Commit - f24272d3b723955fc846da8a6c7a7c0df1c04d4f```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,15 +90,15 @@
    ],
    "source": [
     "# Read in the output data.\n",
-    "data = pd.DataFrame(np.loadtxt(\"output_logs/output_normal_f24272d3b723955fc846da8a6c7a7c0df1c04d4f.txt\", \n",
-    "                               dtype=np.float64, skiprows=9), columns=[\"MCS\", \"Ratio\", \"Energy\", \"Order\"]).set_index(\"MCS\")\n",
+    "data_001 = pd.DataFrame(np.loadtxt(\"output_logs/output_normal_f24272d3b723955fc846da8a6c7a7c0df1c04d4f.txt\", \n",
+    "                                   dtype=np.float64, skiprows=9), columns=[\"MCS\", \"Ratio\", \"Energy\", \"Order\"]).set_index(\"MCS\")\n",
     "\n",
-    "print(data.head().to_markdown())"
+    "print(data_001.head().to_markdown())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,23 +113,8 @@
     }
    ],
    "source": [
-    "## Plot energy and order parameter against Monte Carlo step.\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(12, 4))\n",
-    "\n",
-    "ax[0].plot(data.index, data[\"Energy\"])\n",
-    "ax[1].plot(data.index, data[\"Order\"])\n",
-    "\n",
-    "ax[0].set_title(\"Reduced Temperature = 0.5\")\n",
-    "ax[0].set_xlabel(\"Monte Carlo Step\")\n",
-    "ax[0].set_ylabel(\"Reduced Energy\")\n",
-    "\n",
-    "ax[1].set_title(\"Reduced Temperature = 0.5\")\n",
-    "ax[1].set_xlabel(\"Monte Carlo Step\")\n",
-    "ax[1].set_ylabel(\"Order Parameter\")\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
+    "# Plot the data.\n",
+    "plot_data(data_001)"
    ]
   },
   {
@@ -106,6 +127,122 @@
     "+ $\\text{This is done through performing a simulation where the random seed is to 42.}$\n",
     "\n",
     "- ```-> np.random.seed(42)```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{3. Time Specific Functions}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the script.\n",
+    "import lebwohl_lasher"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a lattice.\n",
+    "lattice_length = 50\n",
+    "lattice = lebwohl_lasher.init_lattice(lattice_length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{3.1 Base Version}$\n",
+    "\n",
+    "+ ```lebwohl_lasher.py Version: Commit - f24272d3b723955fc846da8a6c7a7c0df1c04d4f```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.5 μs ± 1.92 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time the \"cell_energy\" function.\n",
+    "%timeit lebwohl_lasher.cell_energy(lattice, lattice_length, *np.random.randint(0, high=lattice_length, size=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.5 ms ± 755 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time the \"total_energy\" function.\n",
+    "%timeit lebwohl_lasher.total_energy(lattice, lattice_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.6 ms ± 1.6 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time the \"calculate_order\" function.\n",
+    "%timeit lebwohl_lasher.calculate_order(lattice, lattice_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 ms ± 2.64 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Time the \"monte_carlo_step\" function.\n",
+    "%timeit lebwohl_lasher.monte_carlo_step(lattice, lattice_length, temperature=0.5)"
    ]
   },
   {
