docs: edited a comment

--- a/original/testing.ipynb
+++ b/original/testing.ipynb
@@ -461,7 +461,7 @@
     "- $\\text{We do not expect this version to produce the same results as before, even for the same seed.}$\n",
     "\n",
     "+ $\\text{One reason for this is that the random numbers for the Monte Carlo test are now pre-generated.}$\n",
-    "+ $\\text{Another reason for this is that the Monte Carlo process itself has been restructured.}$\n",
+    "+ $\\text{Another reason for this is that the Monte Carlo process itself has been restructured with a checkerboard approach.}$\n",
     "\n",
     "- $\\text{However, the plots in Section 1 validate the correctness of this version.}$"
    ]
