test: performed missing tests for different versions of the "lebwohl_lasher_p_numba.py" script

--- a/parallel_numba/testing.ipynb
+++ b/parallel_numba/testing.ipynb
@@ -298,7 +298,233 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\textbf{2. Time Specific Functions}$"
+    "$\\textbf{2. Check Output Values Are Consistent}$\n",
+    "\n",
+    "+ $\\text{Test if the output logs across versions of the code are the same.}$\n",
+    "+ $\\text{This is done through performing a simulation where the random seed is to 42.}$\n",
+    "\n",
+    "- ```-> np.random.seed(42)```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{2.1 Base Version}$\n",
+    "\n",
+    "+ ```lebwohl_lasher_p_numba.py Version: Commit - 5dee8d63d36767e718de2c402ad8cb3a2b95d628```\n",
+    "\n",
+    "+ $\\text{This version is the same as the serial cython script from commit }$ ```03950205aab8da2c512b7bc9190e10f5e951e6da``` $\\text{.}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|   MCS |   Ratio |   Energy |   Order |\n",
+      "|------:|--------:|---------:|--------:|\n",
+      "|     0 |  0.5    | -22904.3 |  0.2558 |\n",
+      "|     1 |  0.678  | -33612.4 |  0.256  |\n",
+      "|     2 |  0.5805 | -38445.6 |  0.2534 |\n",
+      "|     3 |  0.5151 | -40310.7 |  0.2567 |\n",
+      "|     4 |  0.4768 | -41046.8 |  0.2549 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in the data.\n",
+    "data_compare_001 = pd.DataFrame(np.loadtxt(\"output_logs/output_seed_42_5dee8d63d36767e718de2c402ad8cb3a2b95d628.txt\", \n",
+    "                                             dtype=np.float64, skiprows=9), columns=[\"MCS\", \"Ratio\", \"Energy\", \"Order\"]).set_index(\"MCS\")\n",
+    "\n",
+    "print(data_compare_001.head().to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{2.2 Parallelised Function:}$ ```total_energy```\n",
+    "\n",
+    "+ ```lebwohl_lasher_p_numba.py Version: Commit - 132c87998c0475ee9b0f883cc3a9b2f2febd4c5d```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|   MCS |   Ratio |   Energy |   Order |\n",
+      "|------:|--------:|---------:|--------:|\n",
+      "|     0 |  0.5    | -22904.3 |  0.2558 |\n",
+      "|     1 |  0.678  | -33612.4 |  0.256  |\n",
+      "|     2 |  0.5805 | -38445.6 |  0.2534 |\n",
+      "|     3 |  0.5151 | -40310.7 |  0.2567 |\n",
+      "|     4 |  0.4768 | -41046.8 |  0.2549 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in the data.\n",
+    "data_compare_002 = pd.DataFrame(np.loadtxt(\"output_logs/output_seed_42_132c87998c0475ee9b0f883cc3a9b2f2febd4c5d.txt\", \n",
+    "                                             dtype=np.float64, skiprows=9), columns=[\"MCS\", \"Ratio\", \"Energy\", \"Order\"]).set_index(\"MCS\")\n",
+    "\n",
+    "print(data_compare_002.head().to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assert the new version produces data that is consistent.\n",
+    "np.allclose(data_compare_001, data_compare_002)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{2.3 Parallelised Function:}$ ```calculate_order```\n",
+    "\n",
+    "+ ```lebwohl_lasher_p_numba.py Version: Commit - 61aed6de3778d5294e2379af48a5c17bed674f36```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|   MCS |   Ratio |   Energy |   Order |\n",
+      "|------:|--------:|---------:|--------:|\n",
+      "|     0 |  0.5    | -22904.3 |  0.2558 |\n",
+      "|     1 |  0.678  | -33612.4 |  0.256  |\n",
+      "|     2 |  0.5805 | -38445.6 |  0.2534 |\n",
+      "|     3 |  0.5151 | -40310.7 |  0.2567 |\n",
+      "|     4 |  0.4768 | -41046.8 |  0.2549 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in the data.\n",
+    "data_compare_003 = pd.DataFrame(np.loadtxt(\"output_logs/output_seed_42_61aed6de3778d5294e2379af48a5c17bed674f36.txt\", \n",
+    "                                             dtype=np.float64, skiprows=9), columns=[\"MCS\", \"Ratio\", \"Energy\", \"Order\"]).set_index(\"MCS\")\n",
+    "\n",
+    "print(data_compare_003.head().to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assert the new version produces data that is consistent.\n",
+    "np.allclose(data_compare_001, data_compare_003)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{2.4 Parallelised Function:}$ ```monte_carlo_step```\n",
+    "\n",
+    "+ ```lebwohl_lasher_p_numba.py Version: Commit - 0716b022bc943f2c063dd2c2d031058bcc2bfce7```\n",
+    "\n",
+    "- $\\text{We do not expect this version to produce the same results as before, even for the same seed.}$\n",
+    "- $\\text{This is because the Monte Carlo process itself has been restructured with a checkerboard approach.}$\n",
+    "\n",
+    "+ $\\text{However, the plots in Section 1 validate the correctness of this version.}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|   MCS |   Ratio |   Energy |   Order |\n",
+      "|------:|--------:|---------:|--------:|\n",
+      "|     0 |  0.5    | -22904.3 |  0.2558 |\n",
+      "|     1 |  0.6952 | -34863.4 |  0.2569 |\n",
+      "|     2 |  0.6165 | -42234.9 |  0.2601 |\n",
+      "|     3 |  0.5659 | -46924.1 |  0.2609 |\n",
+      "|     4 |  0.528  | -50484.2 |  0.2622 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in the data.\n",
+    "data_compare_004 = pd.DataFrame(np.loadtxt(\"output_logs/output_seed_42_0716b022bc943f2c063dd2c2d031058bcc2bfce7.txt\", \n",
+    "                                             dtype=np.float64, skiprows=9), columns=[\"MCS\", \"Ratio\", \"Energy\", \"Order\"]).set_index(\"MCS\")\n",
+    "\n",
+    "print(data_compare_004.head().to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assert the new version produces data that is consistent (expected false).\n",
+    "np.allclose(data_compare_001, data_compare_004)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\textbf{3. Time Specific Functions}$"
    ]
   },
   {
@@ -329,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\textbf{2.1 Base Version}$\n",
+    "$\\textbf{3.1 Base Version}$\n",
     "\n",
     "+ ```lebwohl_lasher_p_numba.py Version: Commit - 5dee8d63d36767e718de2c402ad8cb3a2b95d628```\n",
     "\n",
@@ -412,7 +638,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\textbf{2.2 Parallelised Function:}$ ```total_energy```\n",
+    "$\\textbf{3.2 Parallelised Function:}$ ```total_energy```\n",
     "\n",
     "+ ```lebwohl_lasher_p_numba.py Version: Commit - 132c87998c0475ee9b0f883cc3a9b2f2febd4c5d```"
    ]
@@ -439,7 +665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\textbf{2.3 Parallelised Function:}$ ```calculate_order```\n",
+    "$\\textbf{3.3 Parallelised Function:}$ ```calculate_order```\n",
     "\n",
     "+ ```lebwohl_lasher_p_numba.py Version: Commit - 61aed6de3778d5294e2379af48a5c17bed674f36```"
    ]
@@ -466,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\textbf{2.4 Parallelised Function:}$ ```monte_carlo_step```\n",
+    "$\\textbf{3.4 Parallelised Function:}$ ```monte_carlo_step```\n",
     "\n",
     "+ ```lebwohl_lasher_p_numba.py Version: Commit - 0716b022bc943f2c063dd2c2d031058bcc2bfce7```"
    ]
@@ -498,8 +724,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "lebwohl-lasher",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
