chore: fixed comment

--- a/timings/numpy/runtimes.ipynb
+++ b/timings/numpy/runtimes.ipynb
@@ -260,7 +260,7 @@
     "# Create an array to store the results.\n",
     "results = np.zeros(num_runs)\n",
     "\n",
-    "# Time the \"calculate_order\" function.\n",
+    "# Time the \"monte_carlo_step\" function.\n",
     "for i in range(num_runs):\n",
     "    # Start the timer.\n",
     "    start = time.perf_counter()\n",
